# panda-status

./: .devcontainer.json  .gitignore  .ruff.toml  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  validate.yml
config/: configuration.yaml
custom_components/panda_status/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  select.py  sensor.py  switch.py  system_health.py  tools.py  websocket.py
custom_components/panda_status/translations/: en.json
scripts/: develop  lint  setup
