[project]
name = "panda_status"
version = "1.2.0"
requires-python = ">=3.13.2"
dependencies = [
    "colorlog",
    "ffmpeg",
    "ha-ffmpeg",
    "hassil",
    "home-assistant-intents==2025.9.24",
    "homeassistant==2025.8.1",
    "mutagen",
    "numpy",
    "pip>=25.2",
    "pip>=25.2",
    "pymicro-vad",
    "pyspeex-noise",
    "PyTurboJPEG",
    "ruff>=0.12.12",
    "ruff>=0.12.12",
    "websockets",
    "websockets",
]
