[project]
name = "panda_status"
version = "2.0.0"
requires-python = ">=3.13.2"
dependencies = [
    "colorlog",
    "ffmpeg",
    "ha-ffmpeg",
    "hassil",
    "home-assistant-intents==2026.6.1",
    "homeassistant==2026.2.3",
    "mutagen",
    "numpy",
    "pip>=25.2",
    "pymicro-vad",
    "pyspeex-noise",
    "PyTurboJPEG",
    "ruff>=0.12.12",
    "websockets",
]
